organization, profile, header, cooperation

--- a/App/Views/includes/organizations.html
+++ b/App/Views/includes/organizations.html
@@ -1,3 +1,39 @@
 <section class="organizations">
-    ORGANIZATIONS
+    <div class="organizations__bg">
+        <svg class="svg">
+            <clipPath id="organizations-clip-path" clipPathUnits="objectBoundingBox"><path d="M0,0.086 H0.238 C0.238,0.086,0.369,0.135,0.491,0.086 C0.613,0.037,0.629,0.026,0.748,0.003 C0.866,-0.019,1,0.086,1,0.086 V1 H0 V0.086"></path></clipPath>
+        </svg>
+    </div>
+    <svg
+    class="organizations__svg organizations__svg--elipse"
+    viewBox="0 0 496 457"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
+    preserveAspectRatio="none"
+    >
+        <use xlink:href="#elipse"></use>
+    </svg>
+    <h3 class="heading-3">Spolupracuji s neziskovými organizacemi</h3>
+    <container class="organizations__container">
+        <div class="organizations__organization">
+            <svg viewBox="0 0 113 100" class="organization__waterlily organizations__svg--waterlily">
+                <use xlink:href="#waterlily"></use>
+            </svg>
+            <h4 class="heading-4">MAS BRÁNA BRNĚNSKA</h4>
+        </div>
+        <div class="organizations__organization">
+            <svg viewBox="0 0 113 100" class="organization__svg organizations__svg--waterlily">
+                <use xlink:href="#waterlily"></use>
+            </svg>
+            <h4 class="heading-4">Skleněnka z.s.</h4>
+            
+        </div>
+        <div class="organizations__organization">
+            <svg viewBox="0 0 113 100" class="organizations__waterlily organizations__svg--waterlily">
+                <use xlink:href="#waterlily"></use>
+            </svg>
+            <h4 class="heading-4">Škola CoLibri</h4>
+           
+        </div>
+    </container>
 </section>
