--- a/App/Views/includes/svg.html
+++ b/App/Views/includes/svg.html
@@ -530,6 +530,107 @@
             <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
             <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
         </filter>
-      
+        <!-- Waterlily -->
+        <g id="waterlily">
+            <g filter="url(#filter0_waterlily_d)">
+                <path d="M72.1936 37.5949C64.2385 40.1716 53.3567 47.875 57.5677 55.9152C61.1858 62.8235 67.954 63.1375 77.1933 59.246C86.4326 55.3544 104.475 45.5153 104.35 39.9628C104.226 34.4102 80.1486 35.0182 72.1936 37.5949Z" fill="#C3E0C2"/>
+                </g>
+                <path d="M94.8788 42.3427C94.8788 42.3427 82.4085 43.2047 75.2053 45.7276C68.002 48.2505 57.7176 56.1016 57.7176 56.1016L58.0813 57.0331C58.0813 57.0331 69.2547 49.5472 75.9693 46.9178C82.684 44.2884 95.038 42.6013 95.038 42.6013L94.8788 42.3427Z" fill="#986363"/>
+                <path d="M76.4831 41.4585C76.5141 39.6678 76.4349 40.4372 76.3686 42.1864C76.3023 43.9356 76.814 45.2036 76.814 45.2036L77.1072 45.1898C77.1072 45.1898 76.452 43.2493 76.4831 41.4585Z" fill="#986363"/>
+                <path d="M81.3735 42.4883C81.3882 41.6423 81.3508 42.0058 81.3194 42.8322C81.2881 43.6586 81.5298 44.2576 81.5298 44.2576L81.6684 44.2511C81.6684 44.2511 81.3589 43.3343 81.3735 42.4883Z" fill="#986363"/>
+                <path d="M69.6481 43.05C69.6923 40.5009 69.5796 41.5962 69.4851 44.0862C69.3907 46.5762 70.1191 48.3812 70.1191 48.3812L70.5365 48.3616C70.5365 48.3616 69.6039 45.5992 69.6481 43.05Z" fill="#986363"/>
+                <path d="M61.3171 48.3974C61.3613 45.8483 61.2485 46.9436 61.1541 49.4336C61.0597 51.9236 61.7881 53.7286 61.7881 53.7286L62.2055 53.709C62.2055 53.709 61.2729 50.9466 61.3171 48.3974Z" fill="#986363"/>
+                <path d="M71.5142 51.0742C74.0435 50.7531 72.9669 50.9843 70.502 51.3489C68.037 51.7135 66.1634 51.1857 66.1634 51.1857L66.1376 50.7687C66.1376 50.7687 68.985 51.3954 71.5142 51.0742Z" fill="#986363"/>
+                <path d="M83.9664 45.6023C86.4956 45.2812 85.4191 45.5124 82.9541 45.877C80.4891 46.2416 78.6156 45.7138 78.6156 45.7138L78.5897 45.2967C78.5897 45.2967 81.4371 45.9234 83.9664 45.6023Z" fill="#986363"/>
+                <g filter="url(#filter1_waterlily_d)">
+                <path d="M48.653 38.7077C56.5884 41.3443 67.4119 49.1295 63.1405 57.1377C59.4705 64.0185 52.7001 64.2816 43.4903 60.3205C34.2806 56.3594 16.313 46.3848 16.4794 40.8333C16.6459 35.2819 40.7176 36.0712 48.653 38.7077Z" fill="#C3E0C2"/>
+                </g>
+                <path d="M25.9328 43.2846C25.9328 43.2846 38.3961 44.2405 45.5802 46.8176C52.7643 49.3947 62.9893 57.323 62.9893 57.323L62.6185 58.2518C62.6185 58.2518 51.5018 50.6819 44.8072 48.002C38.1126 45.3221 25.7716 43.542 25.7716 43.542L25.9328 43.2846Z" fill="#986363"/>
+                <path d="M44.3345 42.5387C44.3169 40.7478 44.3903 41.5178 44.4435 43.2674C44.4967 45.017 43.9754 46.2811 43.9754 46.2811L43.6823 46.2651C43.6823 46.2651 44.3521 44.3296 44.3345 42.5387Z" fill="#986363"/>
+                <path d="M39.4365 43.5317C39.4282 42.6856 39.4629 43.0494 39.488 43.876C39.5131 44.7026 39.2668 45.2998 39.2668 45.2998L39.1284 45.2922C39.1284 45.2922 39.4448 44.3778 39.4365 43.5317Z" fill="#986363"/>
+                <path d="M51.1574 44.1817C51.1323 41.6323 51.2368 42.7284 51.3125 45.2191C51.3882 47.7097 50.6462 49.5092 50.6462 49.5092L50.229 49.4864C50.229 49.4864 51.1824 46.7312 51.1574 44.1817Z" fill="#986363"/>
+                <path d="M59.4479 49.5919C59.4229 47.0424 59.5274 48.1386 59.603 50.6292C59.6787 53.1199 58.9367 54.9194 58.9367 54.9194L58.5195 54.8966C58.5195 54.8966 59.4729 52.1413 59.4479 49.5919Z" fill="#986363"/>
+                <path d="M49.231 52.1918C46.7042 51.8516 47.779 52.0909 50.2412 52.4741C52.7033 52.8572 54.5808 52.3435 54.5808 52.3435L54.6098 51.9267C54.6098 51.9267 51.7577 52.5319 49.231 52.1918Z" fill="#986363"/>
+                <path d="M36.8203 46.6261C34.2936 46.2859 35.3684 46.5252 37.8305 46.9084C40.2927 47.2916 42.1701 46.7779 42.1701 46.7779L42.1991 46.361C42.1991 46.361 39.3471 46.9663 36.8203 46.6261Z" fill="#986363"/>
+                <path opacity="0.95" d="M51.0435 24.2853C43.1224 23.6617 32.4176 24.8636 36.0613 31.2837C39.7049 37.7038 37.453 44.9226 51.0811 44.432C64.7093 43.9414 64.1305 41.3637 64.7462 33.5416C65.3619 25.7195 58.9646 24.9088 51.0435 24.2853Z" fill="#D8CBDC"/>
+                <g opacity="0.95" filter="url(#filter2_waterlily_d)">
+                <path d="M66.2109 26.448C63.5863 20.9452 58.6808 14.293 55.8125 19.1773C52.9442 24.0615 47.2834 25.3346 52.8378 34.2023C58.3923 43.0699 59.8831 41.6964 65.3171 39.1046C70.7511 36.5128 68.8355 31.9508 66.2109 26.448Z" fill="#D1C3D5"/>
+                </g>
+                <g opacity="0.95" filter="url(#filter3_waterlily_d)">
+                <path d="M80.3268 42.733C85.6174 37.1015 91.2158 28.2477 84.1281 27.108C77.0404 25.9683 72.9321 19.8692 65.0162 30.5088C57.1002 41.1485 59.4081 42.2769 64.9692 47.5014C70.5303 52.7258 75.0362 48.3645 80.3268 42.733Z" fill="#D8CBDC"/>
+                </g>
+                <g opacity="0.95" filter="url(#filter4_waterlily_d)">
+                <path d="M57.3472 37.9202C53.4336 39.7868 48.7025 43.2756 52.1762 45.3155C55.6499 47.3555 56.5554 51.3815 62.8621 47.4312C69.1688 43.4808 68.1919 42.4206 66.3486 38.5559C64.5053 34.6912 61.2608 36.0536 57.3472 37.9202Z" fill="#E1D4A4"/>
+                </g>
+                <g opacity="0.95" filter="url(#filter5_waterlily_d)">
+                <path d="M45.457 41.259C38.2854 44.6796 29.6157 51.0727 35.9813 54.8109C42.3468 58.5491 44.0061 65.9267 55.563 58.6878C67.12 51.4488 65.3299 49.5059 61.9521 42.4239C58.5743 35.3419 52.6287 37.8384 45.457 41.259Z" fill="#D8CBDC"/>
+                </g>
+                <g opacity="0.95" filter="url(#filter6_waterlily_d)">
+                <path d="M59.0222 52.4771C58.477 59.403 59.5278 68.7627 65.1413 65.5769C70.7548 62.391 77.0667 64.36 76.6377 52.4442C76.2087 40.5283 73.9549 41.0344 67.1156 40.496C60.2762 39.9577 59.5674 45.5512 59.0222 52.4771Z" fill="#D0C3D4"/>
+            </g>
+        </g>
+        <filter id="filter0_waterlily_d" x="49.5403" y="21.6021" width="59.6968" height="60.1235" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="4"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0.199062 0 0 0 0 0.758333 0 0 0 0 0.288546 0 0 0 0.15 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+            </filter>
+            <filter id="filter1_waterlily_d" x="11.5989" y="22.7205" width="59.5666" height="60.0034" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="4"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0.199062 0 0 0 0 0.758333 0 0 0 0 0.288546 0 0 0 0.15 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+            </filter>
+            <filter id="filter2_waterlily_d" x="43.0981" y="13.842" width="31.8677" height="35.2786" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="2"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+            </filter>
+            <filter id="filter3_waterlily_d" x="52.3591" y="16.3669" width="42.1646" height="42.5686" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="2"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+            </filter>
+            <filter id="filter4_waterlily_d" x="45.8042" y="32.5383" width="27.4007" height="24.9748" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="2"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+            </filter>
+            <filter id="filter5_waterlily_d" x="27.6345" y="33.062" width="43.5515" height="39.1061" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="2"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+            </filter>
+            <filter id="filter6_waterlily_d" x="53.9714" y="38.9294" width="27.7271" height="35.2889" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"/>
+            <feOffset dy="3"/>
+            <feGaussianBlur stdDeviation="2"/>
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0"/>
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow"/>
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape"/>
+        </filter>
     </defs>
 </svg>
