--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -6,6 +6,7 @@
     <title>Taťjana Horká | Vzájemně v pohybu</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="js/index.js" defer></script>
 </head>
 <body>
     <!-- DEFINING SVGs -->
