--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,11 +39,28 @@ a:link {
   font-size: 3.5rem;
   font-weight: 400;
   letter-spacing: 2px;
-  font-family: "Kalam", cursive; }
+  font-family: "Kalam", cursive;
+  line-height: 5rem; }
+  @media screen and (max-width: 800px) {
+    .heading-3 {
+      font-size: 3rem;
+      line-height: 4rem; } }
+  @media screen and (max-width: 500px) {
+    .heading-3 {
+      font-size: 2.5rem; } }
+  @media screen and (max-width: 400px) {
+    .heading-3 {
+      line-height: 3rem; } }
 
 .heading-4 {
   font-size: 2.5rem;
   font-weight: normal; }
+  @media screen and (max-width: 1100px) {
+    .heading-4 {
+      font-size: 2rem; } }
+  @media screen and (max-width: 500px) {
+    .heading-4 {
+      font-size: 1.5rem; } }
 
 .cooperation-way {
   height: 45rem;
@@ -67,8 +84,15 @@ a:link {
       margin-bottom: 5rem;
       flex-direction: column;
       align-items: center; } }
+  @media screen and (max-width: 900px) {
+    .cooperation-way {
+      height: auto;
+      margin-bottom: 10rem; } }
   .cooperation-way .heading-4 {
     margin-bottom: 3rem; }
+    @media screen and (max-width: 900px) {
+      .cooperation-way .heading-4 {
+        text-align: center; } }
   .cooperation-way__text {
     font-size: 1.6rem; }
   @media screen and (max-width: 1300px) {
@@ -98,6 +122,9 @@ a:link {
         width: 18rem;
         height: 18rem;
         margin-top: auto; } }
+    @media screen and (max-width: 900px) {
+      .cooperation-way__drawing {
+        margin-top: 2rem; } }
 
 .cooperation {
   width: 100%;
@@ -110,10 +137,24 @@ a:link {
     .cooperation {
       padding-left: 5rem;
       padding-right: 5rem; } }
+  @media screen and (max-width: 800px) {
+    .cooperation {
+      padding-bottom: 0;
+      padding-left: 2rem;
+      padding-right: 2rem; } }
   .cooperation .heading-3 {
     margin-left: 11rem;
     margin-bottom: 10rem;
     position: relative; }
+    @media screen and (max-width: 800px) {
+      .cooperation .heading-3 {
+        width: max-content;
+        margin-left: auto;
+        margin-right: auto; } }
+    @media screen and (max-width: 400px) {
+      .cooperation .heading-3 {
+        width: min-content;
+        text-align: center; } }
     .cooperation .heading-3::before {
       content: "";
       width: 5rem;
@@ -123,6 +164,11 @@ a:link {
       display: block;
       position: absolute;
       left: -8rem; }
+      @media screen and (max-width: 800px) {
+        .cooperation .heading-3::before {
+          left: 50%;
+          top: -6rem;
+          transform: translateX(-50%); } }
   .cooperation__container {
     display: flex;
     justify-content: space-around; }
@@ -214,6 +260,9 @@ a:link {
   height: 100vh;
   margin-bottom: -15rem;
   position: relative; }
+  @media screen and (max-width: 800px) {
+    .header {
+      margin-bottom: -5rem; } }
   .header__svg {
     position: absolute; }
     .header__svg--top {
@@ -223,6 +272,13 @@ a:link {
       top: 0;
       left: 0;
       z-index: 1; }
+      @media screen and (max-width: 900px) {
+        .header__svg--top {
+          height: 15rem; } }
+      @media screen and (max-width: 800px) {
+        .header__svg--top {
+          background-color: #9CBD6F;
+          height: 10rem; } }
     .header__svg--bottom {
       fill: #9CBD6F;
       height: 30rem;
@@ -230,6 +286,19 @@ a:link {
       bottom: 0;
       left: 0;
       z-index: 1; }
+      @media screen and (max-width: 900px) {
+        .header__svg--bottom {
+          height: 28rem; } }
+      @media screen and (max-width: 800px) {
+        .header__svg--bottom {
+          height: 20rem;
+          width: 200%;
+          left: -100%; } }
+      @media screen and (max-width: 400px) {
+        .header__svg--bottom {
+          height: 15rem;
+          width: 300%;
+          left: -170%; } }
     .header__svg--flower {
       width: 15rem;
       height: 15rem;
@@ -252,18 +321,52 @@ a:link {
       .header__text {
         bottom: 15rem;
         right: 3rem; } }
+    @media screen and (max-width: 900px) {
+      .header__text {
+        bottom: 15rem;
+        right: 1rem; } }
+    @media screen and (max-width: 800px) {
+      .header__text {
+        width: 100%;
+        height: 100%;
+        bottom: 0;
+        right: 0; } }
   @media screen and (max-width: 1300px) {
     .header .heading-2 {
       font-size: 3rem; } }
   @media screen and (max-width: 1200px) {
     .header .heading-2 {
       font-size: 3rem; } }
+  @media screen and (max-width: 900px) {
+    .header .heading-2 {
+      font-size: 2.5rem; } }
+  @media screen and (max-width: 800px) {
+    .header .heading-2 {
+      width: 100%;
+      font-size: 4rem;
+      text-align: center;
+      position: absolute;
+      top: 2rem; } }
   @media screen and (max-width: 1300px) {
     .header .heading-1 {
       font-size: 6rem; } }
   @media screen and (max-width: 1200px) {
     .header .heading-1 {
       font-size: 5rem; } }
+  @media screen and (max-width: 900px) {
+    .header .heading-1 {
+      font-size: 4.5rem; } }
+  @media screen and (max-width: 800px) {
+    .header .heading-1 {
+      font-size: 3.5rem;
+      position: absolute;
+      bottom: 10rem;
+      right: 4rem; } }
+  @media screen and (max-width: 400px) {
+    .header .heading-1 {
+      font-size: 3rem;
+      bottom: 7rem;
+      right: 2rem; } }
 
 .passedEvents {
   width: 100vw;
@@ -341,11 +444,14 @@ a:link {
       text-align: center; }
 
 .profile {
-  padding-bottom: 20rem;
+  margin-bottom: -4rem;
   background-image: linear-gradient(180deg, rgba(159, 191, 115, 0.1) 0%, rgba(129, 168, 76, 0.1) 100%);
   display: flex;
   justify-content: flex-end;
   position: relative; }
+  @media screen and (max-width: 800px) {
+    .profile {
+      flex-direction: column; } }
   .profile__svg {
     position: absolute; }
     .profile__svg--timber {
@@ -356,6 +462,9 @@ a:link {
       @media screen and (max-width: 1100px) {
         .profile__svg--timber {
           width: 75%; } }
+      @media screen and (max-width: 800px) {
+        .profile__svg--timber {
+          display: none; } }
     .profile__svg--root {
       width: 40%;
       height: 15rem;
@@ -364,6 +473,9 @@ a:link {
       transform: translateY(-50%);
       position: absolute;
       z-index: 2; }
+      @media screen and (max-width: 800px) {
+        .profile__svg--root {
+          display: none; } }
   .profile__photo {
     width: 35rem;
     height: 50rem;
@@ -379,6 +491,22 @@ a:link {
     @media screen and (max-width: 1100px) {
       .profile__photo {
         right: 75%; } }
+    @media screen and (max-width: 800px) {
+      .profile__photo {
+        width: 40rem;
+        height: 60rem;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        right: unset;
+        top: unset;
+        transform: none;
+        bottom: -4rem; } }
+    @media screen and (max-width: 450px) {
+      .profile__photo {
+        bottom: 0;
+        width: 100%;
+        height: auto; } }
   .profile__text {
     height: 65rem;
     padding-top: 15rem;
@@ -388,6 +516,12 @@ a:link {
     @media screen and (max-width: 1100px) {
       .profile__text {
         width: 75%; } }
+    @media screen and (max-width: 800px) {
+      .profile__text {
+        width: 100%;
+        padding-top: 10rem;
+        padding-bottom: 10rem;
+        height: auto; } }
   .profile__p {
     width: 50rem;
     margin-left: auto;
@@ -398,5 +532,124 @@ a:link {
     @media screen and (max-width: 1200px) {
       .profile__p {
         margin-left: 20rem; } }
+    @media screen and (max-width: 1000px) {
+      .profile__p {
+        width: 44rem; } }
+    @media screen and (max-width: 900px) {
+      .profile__p {
+        width: 38rem; } }
+    @media screen and (max-width: 800px) {
+      .profile__p {
+        width: 40rem;
+        margin-left: auto; } }
+    @media screen and (max-width: 450px) {
+      .profile__p {
+        width: 30rem; } }
+    @media screen and (max-width: 350px) {
+      .profile__p {
+        width: 25rem; } }
     .profile__p:not(:last-child) {
       margin-bottom: 4rem; }
+
+.organizations {
+  padding-bottom: 20rem;
+  position: relative; }
+  .organizations__svg {
+    position: absolute;
+    z-index: 50; }
+    .organizations__svg--elipse {
+      width: 50rem;
+      height: 50rem;
+      top: 30rem;
+      left: 50%;
+      transform: translateY(-50%) translateX(-50%); }
+      @media screen and (max-width: 800px) {
+        .organizations__svg--elipse {
+          width: 45rem;
+          height: 45rem; } }
+      @media screen and (max-width: 500px) {
+        .organizations__svg--elipse {
+          width: 40rem;
+          height: 40rem;
+          top: 25rem; } }
+      @media screen and (max-width: 400px) {
+        .organizations__svg--elipse {
+          width: 30rem;
+          height: 30rem; } }
+    .organizations__svg--waterlily {
+      transition: transform .5s; }
+  .organizations .heading-3 {
+    width: 30rem;
+    color: #000000;
+    text-align: center;
+    top: 30rem;
+    left: 50%;
+    position: absolute;
+    transform: translateY(-50%) translateX(-50%); }
+    @media screen and (max-width: 500px) {
+      .organizations .heading-3 {
+        top: 25rem; } }
+  .organizations .heading-4 {
+    margin-top: -4rem;
+    position: relative;
+    z-index: 2; }
+    @media screen and (max-width: 500px) {
+      .organizations .heading-4 {
+        margin-top: -3rem; } }
+  .organizations__bg {
+    height: 40rem;
+    background: linear-gradient(96.16deg, #616160 1.42%, #9FBF73 109.66%);
+    opacity: 0.1;
+    clip-path: url(#organizations-clip-path); }
+    @media screen and (max-width: 500px) {
+      .organizations__bg {
+        height: 33rem; } }
+  .organizations__container {
+    margin-top: 30rem;
+    display: flex;
+    justify-content: space-around; }
+    @media screen and (max-width: 800px) {
+      .organizations__container {
+        margin-top: 0;
+        padding-top: 20rem;
+        height: 50rem;
+        position: relative; } }
+    @media screen and (max-width: 400px) {
+      .organizations__container {
+        padding-top: 10rem; } }
+  .organizations__organization {
+    height: 20rem;
+    width: 40rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative; }
+    @media screen and (max-width: 800px) {
+      .organizations__organization {
+        height: 17rem;
+        width: 30rem; }
+        .organizations__organization:first-of-type {
+          position: absolute;
+          top: 35rem; } }
+    @media screen and (max-width: 500px) {
+      .organizations__organization {
+        height: 13rem;
+        width: 25rem; } }
+    @media screen and (max-width: 400px) {
+      .organizations__organization {
+        height: 10rem;
+        width: 20rem; }
+        .organizations__organization:first-of-type {
+          position: absolute;
+          top: 23rem; } }
+    .organizations__organization:hover .organizations__svg--waterlily {
+      transform: translateY(1rem); }
+  .organizations__wave {
+    background-image: url("../img/wave.svg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 10rem;
+    height: 10rem;
+    position: absolute;
+    top: 3rem;
+    z-index: -1; }
