--- a/src/client/scss/components/_cooperation-way.scss
+++ b/src/client/scss/components/_cooperation-way.scss
@@ -1,3 +1,7 @@
+//VARIABLES
+$bp-cooperation-mobile: 900px;
+//
+
 .cooperation-way {
   height: 45rem;
   width: 25rem;
@@ -17,16 +21,24 @@
     width: 48rem;
   }
   @media screen and (max-width: 1100px) {
-      width: 40rem;
-      height: 40rem;
-      margin-bottom: 5rem;
+    width: 40rem;
+    height: 40rem;
+    margin-bottom: 5rem;
 
     flex-direction: column;
     align-items: center;
   }
+  @media screen and (max-width: $bp-cooperation-mobile) {
+    height: auto;
+    margin-bottom: 10rem;
+  }
 
   & .heading-4 {
     margin-bottom: 3rem;
+
+    @media screen and (max-width: $bp-cooperation-mobile) {
+      text-align: center;
+    }
   }
   &__text {
     font-size: 1.6rem;
@@ -40,8 +52,8 @@
       padding-right: 3rem;
     }
     @media screen and (max-width: 1100px) {
-       width: 100%;
-       padding-right: 0;
+      width: 100%;
+      padding-right: 0;
     }
   }
   &__drawing {
@@ -57,9 +69,12 @@
       width: 30%;
     }
     @media screen and (max-width: 1100px) {
-       width: 18rem;
-       height: 18rem;
-       margin-top: auto;
-     }
+      width: 18rem;
+      height: 18rem;
+      margin-top: auto;
+    }
+    @media screen and (max-width: $bp-cooperation-mobile) {
+      margin-top: 2rem;
+    }
   }
 }
