--- a/src/client/scss/sections/_header.scss
+++ b/src/client/scss/sections/_header.scss
@@ -1,8 +1,16 @@
+//VARIABLES
+$bp-header-mobile: 800px;
+//
+
 .header {
   height: 100vh;
   margin-bottom: -15rem;
 
   position: relative;
+
+  @media screen and (max-width: $bp-header-mobile) {
+   margin-bottom: -5rem;
+  }
 
   &__svg {
     position: absolute;
@@ -15,6 +23,14 @@
       top: 0;
       left: 0;
       z-index: 1;
+
+      @media screen and (max-width: 900px) {
+        height: 15rem;
+      }
+      @media screen and (max-width: $bp-header-mobile) {
+        background-color: $color-green;
+        height: 10rem;
+      }
     }
     &--bottom {
       fill: $color-green;
@@ -24,6 +40,22 @@
       bottom: 0;
       left: 0;
       z-index: 1;
+
+      @media screen and (max-width: 900px) {
+        height: 28rem;
+      }
+      @media screen and (max-width: $bp-header-mobile) {
+        height: 20rem;
+        width: 200%;
+
+        left: -100%;
+      }
+      @media screen and (max-width: 400px) {
+        height: 15rem;
+        width: 300%;
+
+        left: -170%;
+      }
     }
     &--flower {
       width: 15rem;
@@ -54,6 +86,17 @@
       bottom: 15rem;
       right: 3rem;
     }
+    @media screen and (max-width: 900px) {
+      bottom: 15rem;
+      right: 1rem;
+    }
+    @media screen and (max-width: $bp-header-mobile) {
+      width: 100%;
+      height: 100%;
+
+      bottom: 0;
+      right: 0;
+    }
   }
   & .heading-2 {
     @media screen and (max-width: 1300px) {
@@ -62,6 +105,18 @@
     @media screen and (max-width: 1200px) {
       font-size: 3rem;
     }
+    @media screen and (max-width: 900px) {
+      font-size: 2.5rem;
+    }
+    @media screen and (max-width: $bp-header-mobile) {
+      width: 100%;
+
+      font-size: 4rem;
+      text-align: center;
+
+      position: absolute;
+      top: 2rem;
+    }
   }
   & .heading-1 {
     @media screen and (max-width: 1300px) {
@@ -69,6 +124,22 @@
     }
     @media screen and (max-width: 1200px) {
       font-size: 5rem;
+    }
+    @media screen and (max-width: 900px) {
+      font-size: 4.5rem;
+    }
+    @media screen and (max-width: $bp-header-mobile) {
+      font-size: 3.5rem;
+
+      position: absolute;
+      bottom: 10rem;
+      right: 4rem;
+    }
+    @media screen and (max-width: 400px) {
+      font-size: 3rem;
+
+      bottom: 7rem;
+      right: 2rem;
     }
   }
 }
