--- a/App/Views/includes/events.html
+++ b/App/Views/includes/events.html
@@ -1,74 +1,16 @@
 <section class="events">
-    <div class="events__btn-block events__btn-block--prev">
-        <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#eventBlock" />
-        </svg>
-        <div class="events__btn-wrapper eventsBtnPrev">
-            <div class="events__btn"></div>
+
+    {% for event in events %}
+
+        <div class="events__event">
+            <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
+                <use xlink:href="#eventBlock" />
+            </svg>
+            <img class="events__event__image" src="/kimg/{{ event.event_imageUrl }}" alt="{{ event.event_title }}">
+            <h4 class="heading-4">{{ event.event_title }}</h4>
+            <p class="paragraph-small">{{ event.event_prettyDate }}</p>
         </div>
-    </div>
-    <div class="events__event">
-        <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#eventBlock" />
-        </svg>
-        <img class="events__event__image" src="img/group.jpg" alt="group">
-        <h4 class="heading-4">Lesní zámek v1.0</h4>
-        <p class="paragraph-small">21. - 25.10.2021</p>
-    </div>
-    <div class="events__event">
-        <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#eventBlock" />
-        </svg>
-        <img class="events__event__image" src="img/group.jpg" alt="group">
-        <h4 class="heading-4">Lesní zámek v2.0</h4>
-        <p class="paragraph-small">21. - 25.10.2021</p>
-    </div>
-    <div class="events__event">
-        <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#eventBlock" />
-        </svg>
-        <img class="events__event__image" src="img/group.jpg" alt="group">
-        <h4 class="heading-4">Lesní zámek v3.0</h4>
-        <p class="paragraph-small">21. - 25.10.2021</p>
-    </div>
-    <!-- <div class="events__event">
-        <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#eventBlock" />
-        </svg>
-        <img class="events__event__image" src="img/group.jpg" alt="group">
-        <h4 class="heading-4">Lesní zámek v4.0</h4>
-        <p class="paragraph-small">21. - 25.10.2021</p>
-    </div>
-    <div class="events__event">
-        <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#eventBlock" />
-        </svg>
-        <img class="events__event__image" src="img/group.jpg" alt="group">
-        <h4 class="heading-4">Lesní zámek v5.0</h4>
-        <p class="paragraph-small">21. - 25.10.2021</p>
-    </div>
-    <div class="events__event">
-        <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#eventBlock" />
-        </svg>
-        <img class="events__event__image" src="img/group.jpg" alt="group">
-        <h4 class="heading-4">Lesní zámek v6.0</h4>
-        <p class="paragraph-small">21. - 25.10.2021</p>
-    </div> -->
-    <div class="events__btn-block events__btn-block--next">
-        <svg width="414" height="308" viewBox="0 0 414 308" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#eventBlock" />
-        </svg>
-        <div class="events__btn-wrapper eventsBtnNext">
-            <div class="events__btn"></div>
-        </div>
-    </div>
-    <div class="events__mobile-btns">
-        <div class="events__btn-wrapper eventsBtnPrev">
-            <div class="events__btn"></div>
-        </div>
-        <div class="events__btn-wrapper eventsBtnNext">
-            <div class="events__btn"></div>
-        </div>
-    </div>
+
+    {% endfor %}
+
 </section>
