--- a/App/Views/includes/passedEvents.html
+++ b/App/Views/includes/passedEvents.html
@@ -21,6 +21,7 @@
     <form class="passedEvents__form" action="/subscribe" method="POST">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
         <label for="email">Každou akci posílám na mail</label>
-        <input type="email" name="email" id="email" placeholder="vas@email.cz">
+        <input class="passedEvents__form__email" type="email" name="email" id="email" placeholder="vas@email.cz">
+        <input class="passedEvents__form__submit hidden" type="submit" name="submit" value="Přidat se">
     </form>
 </section>
