--- a/src/client/scss/sections/_passedEvents.scss
+++ b/src/client/scss/sections/_passedEvents.scss
@@ -147,7 +147,7 @@
         & label {
             margin-bottom: 1rem;
         }
-        & input {
+        &__email {
             width: 50rem;
             height: 6rem;
             padding: 1rem;
@@ -165,6 +165,28 @@
             @media only screen and (max-width: 500px) {
                 width: 28rem;
                 height: 5rem;
+            }
+        }
+        &__submit {
+            border: none;
+            outline: none;
+            background-color: transparent;
+            cursor: pointer;
+            transform: translate(-50%, -50%);
+
+            color: $color-white;
+            font-size: $font-big;
+            text-transform: uppercase;
+            font-weight: 400;
+            letter-spacing: 2px;
+            text-shadow: 0 2px 3px $color-black-overlay-light-2;
+
+            position: absolute;
+            bottom: -6rem;
+            left: 50%;
+
+            &.hidden {
+                display: none;
             }
         }
     }
