--- a/App/Views/includes/footer.html
+++ b/App/Views/includes/footer.html
@@ -1,9 +1,9 @@
         <!--FOOTER-->
         <footer class="footer">
-            <svg class="footer__stain" width="375" height="593" viewBox="0 0 375 593" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="footer__stain" width="591" height="592" viewBox="0 0 591 592" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <use xlink:href="#decorationShape"></use> 
             </svg>
-            <svg class="footer__root" width="886" height="265" viewBox="0 0 886 265" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg class="footer__root" width="890" height="81" viewBox="0 0 890 81" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <use xlink:href="#root"></use>
             </svg> 
             <div class="footer__columns">
@@ -22,7 +22,7 @@
                     <p class="paragraph-1">Cestovní náhrady jsou stanoveny podle počtu kilometrů</p>
                 </div>
                 <div class="footer__columns__help">
-                    <h5 class="heading-5">S tvorbou webu pomohl</h5>
+                    <h5 class="heading-5 footer__columns__help__head">S tvorbou webu pomohl</h5>
                     <img src="img/group.jpg" alt="Amnion Web" class="footer__columns__help__photo">
                     <p class="footer__columns__help__text">AmnioN Web</p>
                 </div>
