--- a/App/Views/includes/topics.html
+++ b/App/Views/includes/topics.html
@@ -1,10 +1,8 @@
 <section class="topics">
-    <div class="topics__svg">
-        <svg class="topics__svg__1" width="375" height="593" viewBox="0 0 375 593" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#decorationShape"></use> 
-        </svg>
-    </div>
-    <img src="img/leafs.jpg" alt="rose" class="topics__img">
+    <svg class="topics__svgTop" width="591" height="592" viewBox="0 0 591 592" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="#decorationShape"></use> 
+    </svg>
+    <img src="img/leafs.jpg" alt="rose" class="topics__img__regular">
     <div class="topics__text">
         <div class="topics__text__head">
             <svg class="topics__text__head__svg" width="59" height="65" viewBox="0 0 59 65" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -18,9 +16,8 @@
         <div class="topics__text__reflect paragraph-1">- Komunikace</div>
         <div class="topics__text__reflect paragraph-1">- Mezilidské vztahy</div>        
     </div>
-    <div class="topics__svg">
-        <svg class="topics__svg__2" width="375" height="593" viewBox="0 0 375 593" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#decorationShape"></use> 
-        </svg>
-    </div>
+    <svg class="topics__svgBottom" width="591" height="592" viewBox="0 0 591 592" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <use xlink:href="#decorationShape"></use> 
+    </svg>
+    <img src="img/leafs.jpg" alt="rose" class="topics__img__mobile">
 </section>
