--- a/src/client/scss/sections/_footer.scss
+++ b/src/client/scss/sections/_footer.scss
@@ -7,17 +7,81 @@
 
     position: relative;
 
+    @media only screen and (max-width: 1200px) {
+        height: 50rem;
+    }
+    @media only screen and (max-width: 1050px) {
+        padding: 5rem;
+    }
+    @media only screen and (max-width: 1000px) {
+        height: 40rem;
+
+        padding: 5rem 0;
+    }
+    @media only screen and (max-width: 800px) {
+        height: 115rem;
+
+        padding: 5rem 15rem;
+    }
+    @media only screen and (max-width: 680px) {
+        height: 105rem;
+
+        padding: 5rem 10rem;
+    }
+    @media only screen and (max-width: 580px) {
+        padding: 3rem 5rem;
+    }
+    @media only screen and (max-width: 510px) {
+        height: 85rem;
+    }
+    @media only screen and (max-width: 370px) {
+        padding: 3rem 1rem;
+    }
+
     &__stain {
         position: absolute;
-        right: 0;
+        right: -10%;
+        top: -25%;
 
-        transform: translateY(-25rem);
+        @media only screen and (max-width: 1200px) {
+            width: 30rem;
+            height: 30rem;
+
+            top: -10%;
+        }
+        @media only screen and (max-width: 800px) {
+            display: none;
+        }
     }
     &__root{
+        width: 80rem;
+        height: 30rem;
+
         position: absolute;
         right: 0;
+        top: -35%;
         
-        transform: translateY(-25rem) rotate(180deg);
+        transform: scaleX(-1);
+
+        @media only screen and (max-width: 1200px) {
+            width: 50rem;
+            height: 20rem;
+
+            top: -30%;
+        }
+        @media only screen and (max-width: 1000px) {
+            top: -35%;
+        }
+        @media only screen and (max-width: 800px) {
+            top: -15%;
+        }
+        @media only screen and (max-width: 510px) {
+            width: 25rem;
+            height: 10rem;
+
+            top: -9%;
+        }
+        
     }
     &__columns {
         width: 100%;
@@ -26,23 +90,145 @@
         flex-direction: row;
         justify-content: space-between;
 
-        &__contact {
+        @media only screen and (max-width: 800px) {
+            flex-direction: column;
+            justify-content: center;
+        }
 
+        & .paragraph-1 {
+            @media only screen and (max-width: 1400px) {
+                font-size: $font-smallest;
+            }
+            @media only screen and (max-width: 800px) {
+                font-size: $font-regular;
+            }
+            @media only screen and (max-width: 510px) {
+                font-size: $font-smallest;
+            }
+            &__break {
+                @media only screen and (max-width: 800px) {
+                    margin-bottom: 1rem;
+                }
+            }
+        }
+        & .heading-5 {
+            @media only screen and (max-width: 1400px) {
+                font-size: $font-big;
+            }
+            @media only screen and (max-width: 1100px) {
+                font-size: $font-regular;
+            }
+            @media only screen and (max-width: 800px) {
+                font-size: $font-big;
+
+                margin-bottom: 3rem;
+            }
+            @media only screen and (max-width: 510px) {
+                font-size: $font-regular;
+            }
+        }
+
+        &__contact {
+            margin: 3rem;
+
+            @media only screen and (max-width: 1000px) {
+                margin: 1rem;
+            }
+            @media only screen and (max-width: 800px) {
+                margin-bottom: 4rem;
+            }
         }
 
         &__price {
-        
+            margin: 3rem;
+
+            @media only screen and (max-width: 1000px) {
+                margin: 1rem;
+            }
+            @media only screen and (max-width: 800px) {
+                margin-bottom: 4rem;
+            }
         }
         
         &__help {
+            margin: 3rem;
+
+            @media only screen and (max-width: 1000px) {
+                margin: 1rem;
+            }
+            @media only screen and (max-width: 800px) {
+                width: 100%;
+                margin: 1;
+
+            }
 
             &__photo {
                 width: 40rem;
                 height: 22rem;
+
+                @media only screen and (max-width: 1400px) {
+                    width: 25rem;
+                    height: 14rem;
+                }
+                @media only screen and (max-width: 1000px) {
+                    width: 18rem;
+                    height: 10rem;
+                }
+                @media only screen and (max-width: 800px) {
+                    width: 70vw;
+                    height: auto;
+
+                    padding-right: 7rem;
+                }
+                @media only screen and (max-width: 680px) {
+                    padding-right: 0;
+                }
+                @media only screen and (max-width: 580px) {
+                    padding-left: 7rem;
+                }
+                @media only screen and (max-width: 500px) {
+                    padding-left: 4rem;
+                }
+                @media only screen and (max-width: 430px) {
+                    padding-left: 2rem;
+                }
+                @media only screen and (max-width: 370px) {
+                    padding-left: 7rem;
+                }
+                @media only screen and (max-width: 330px) {
+                    padding-left: 5rem;
+                }
             }
             &__text {
-                transform: translate(28rem, -3rem);
+                transform: translate(28rem,-3rem);
                 font-size: $font-big;
+
+                @media only screen and (max-width: 1400px) {
+                    transform: translate(18rem,-3rem);
+                }
+                @media only screen and (max-width: 1000px) {
+                    transform: translate(8rem,-3rem);
+                }
+                @media only screen and (max-width: 800px) {
+                    padding-right: 10rem;
+
+                    transform: translateX(22%);
+                }
+                @media only screen and (max-width: 680px) {
+                    transform: translateX(25%);
+                }
+                @media only screen and (max-width: 580px) {
+                    transform: translateX(35%);
+                }
+                @media only screen and (max-width: 430px) {
+                    transform: translateX(25%);
+                }
+                @media only screen and (max-width: 370px) {
+                    transform: translateX(27%);
+                }
+                @media only screen and (max-width: 330px) {
+                    transform: translateX(23%);
+                }
             }
         }
     }
