--- a/src/client/scss/sections/_topics.scss
+++ b/src/client/scss/sections/_topics.scss
@@ -9,43 +9,152 @@
     justify-content: space-between;
     position: relative;
 
-    &__svg {
+    @media only screen and (max-width: 1900px) {
+        padding-right: 30rem;
+    }
+    @media only screen and (max-width: 1500px) {
+        padding-right: 10rem;
+    }
+    @media only screen and (max-width: 1200px) {
+        padding-right: 5rem;
+    }
+    @media only screen and (max-width: 800px) {
+        height: 110rem;
+        padding: 10rem;
+
+        flex-direction: column;
+        justify-content: center;
+    }
+    @media only screen and (max-width: 650px) {
+        padding: 5rem;
+    }
+    @media only screen and (max-width: 550px) {
+        padding: 2rem;
+    }
+
+    &__svgTop {
         position: absolute;
-        &__1 {
-            transform: translate(170rem,-20rem);
+    
+        right: 10%;
+        top: -20%;
+
+        @media only screen and (max-width: 1400px) {
+            width: 45rem;
+            height: 45rem;
+
+            top: -10%;
+            right: 0;
         }
-        &__2 {
-            transform: translate(190rem,50rem);
+        @media only screen and (max-width: 1000px) {
+            width: 30rem;
+            height: 30rem;
+
+            top: 0;
+        }
+        @media only screen and (max-width: 800px) {
+            display: none;
+        }
+    }
+    &__svgBottom {
+        position: absolute;
+
+        right: 0;
+        bottom: -35%;
+
+        @media only screen and (max-width: 1400px) {
+            width: 45rem;
+            height: 45rem;
+
+            bottom: -20%;
+        }
+        @media only screen and (max-width: 1000px) {
+            width: 30rem;
+            height: 30rem;
+
+            bottom: 0;
+        }
+        @media only screen and (max-width: 800px) {
+            display: none;
         }
     }
     &__img {
-        width: 54rem;
-        height: 80rem;
+
+        &__regular {
+            width: 54rem;
+            height: 80rem;
+
+            @media only screen and (max-width: 1200px) {
+                width: 35rem;
+                height: 60rem;
+            
+                transform: translateY(10rem);
+            }
+            @media only screen and (max-width: 950px) {
+                margin-right: 3rem;
+            }
+            @media only screen and (max-width: 800px) {
+                display: none;
+            }
+        }
+        &__mobile {
+            width: 100%;
+
+            transform: rotate(270deg);
+
+            @media only screen and (min-width: 801px) {
+                display: none;
+            }
+        }
     }
     &__text {
         width: 50rem;
-        height: 100%;
 
         transform: translateY(10rem);
 
+        @media only screen and (max-width: 800px) {
+            width: 90vw;
+
+            overflow-wrap: normal;
+
+            transform: none;
+        }
+
         &__head {
-            height: 10rem;
             margin-bottom: 5rem;
 
             display: flex;
             flex-direction: row;
             align-items: center;
 
+            @media only screen and (max-width: 800px) {
+                margin-bottom: 2rem;
+                
+                flex-direction: column;
+                justify-content: center;
+            }
+
             &__svg {
                 margin-right: 2rem;
+            }
+            &__text {
+                @media only screen and (max-width: 800px) {
+                    font-size: $font-big;
+                }
             }
         }
         &__consultation {
             margin-bottom: 5rem;
 
+            @media only screen and (max-width: 800px) {
+                font-size: $font-smallest;
+            }
+
         }
         &__reflect {
-
+            @media only screen and (max-width: 800px) {
+                font-size: $font-smallest;
+                margin-bottom: 0;
+            }
         }
     }
 }
