--- a/src/client/scss/sections/_way.scss
+++ b/src/client/scss/sections/_way.scss
@@ -4,10 +4,33 @@
 
     position: relative;
 
+    @media only screen and (max-width: 600px) {
+        padding: 6rem;
+    }
+    @media only screen and (max-width: 400px) {
+        padding: 3rem;
+    }
+
     &__stain {
         position: absolute;
+        top: 35%;
+        left: 20%;
 
-        transform: translate(15rem,6rem);
+        @media only screen and (max-width: 1400px) {
+            width: 45rem;
+            height: 45rem;
+
+            top: 40%;
+        }
+        @media only screen and (max-width: 1000px) {
+            width: 30rem;
+            height: 30rem;
+
+            top: 40%;
+        }
+        @media only screen and (max-width: 800px) {
+            display: none;
+        }
     }
 
     &__header {
@@ -17,8 +40,23 @@
         flex-direction: row;
         align-items: center;
 
+        @media only screen and (max-width: 800px) {
+            flex-direction: column;
+            justify-content: center;
+        }
+
         &__svg {
             margin-right: 2rem;
+        }
+        &__text {
+            @media only screen and (max-width: 400px) {
+                font-size: $font-regular;
+            }
+        }
+    }
+    &__text {
+        @media only screen and (max-width: 500px) {
+            font-size: $font-smallest;
         }
     }
 }
